--- a/public/assets/site/css/newcustom.css
+++ b/public/assets/site/css/newcustom.css
@@ -363,6 +363,13 @@ h1.fs-sm {
   .accordion-flush .accordion-item .accordion-button {
     border-radius: 0;
   }
+  .footer-bg{
+      background-image: url(../images/footer-bg.svg);
+  }
+  .footer-nav__li{
+      margin-bottom: .5rem;
+      text-transform: uppercase;
+  }
   
 @media screen and (max-width: 1640px) {
     .me-lg-none {
