maca section border-color changed

--- a/public/assets/site/css/newcustom.css
+++ b/public/assets/site/css/newcustom.css
@@ -244,7 +244,7 @@ h1.fs-sm {
 
 .maca-bg {
     background-image: url(../img/maca-bg-lg.svg);
-    border: 3px solid red;
+    border: 3px solid #D52301;
 }
 .faq-bg{
     background-image: url(../img/faq-bg.png);
